fix logo on mobile

--- a/CarService/CarService.WebApplication/Content/Site.css
+++ b/CarService/CarService.WebApplication/Content/Site.css
@@ -285,6 +285,10 @@ p > a, p > a:hover {
 }
 
 @media (max-width: 700px) {
+    .custom-navbar .navbar-brand {
+        width: 220px;
+    }
+
     .grids-panel .grid-item .grid-info-text {
         height: 25px;
     }
